@@ -1,5 +1,6 @@
 Changelog for "Apache xml-security" <http://xml.apache.org/security/>
 New in ...
+    Fixed bug 44629: Switch order of XML Signature validation steps
     Fixed bug 44617: Regression when processing XPath transform
     Fixed bug 44586: XMLX509IssuerSerial.getIssuerName incorrectly escapes '#' in hex values
     Fixed rfe 42653: Add support for C14N 1.1 to Java implementation. Thanks
